<resources>
    <string name="app_name">纺机</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--首页底部文字-->
    <string name="title_mall">商城</string>
    <string name="title_forum">论坛</string>
    <string name="title_shop_car" translatable="false">购物车</string>
    <string name="title_me" translatable="false">我的</string>
    <string name="title_null"></string>

    <!--购物车-->
    <string name="hot_price_text">价格：¥%1d元</string>
    <string name="all_price_text">合计金额：¥%1d元</string>
    <string name="order_price_text">¥%1d元</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_mall">mall</string>
    <string name="frag_forum">forum</string>
    <string name="frag_shop_car">shop_car</string>
    <string name="frag_me">me</string>
    <string name="frag_add">add</string>
    <string name="login_banquan">版权所有 杭州纺织器械有限公司</string>
    <string name="login_register">注 册</string>
    <string name="login_login">登 陆</string>
    <string name="login_hint_phone">输入您的手机号码</string>
    <string name="input_new_phone">输入您的新手机号码</string>
    <string name="input_pwd">请输入您的密码 \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t 20个字符以内</string>
    <string name="login_hint_pwd">请输入您的密码</string>
    <string name="login_limit_pwd_length">20个字符以内</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="toast_input_login_error">请输入手机号或密码</string>
    <string name="toast_login_input_phone">请输入正确的手机号码</string>
    <string name="toast_login_input_pwd_error">密码长度最长不能超过20</string>
    <string name="request_fail">网络请求失败</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="register_input_code">请输入您的验证码</string>
    <string name="input_new_pwd">请输入您的新密码</string>
    <string name="forget_pwd_problem_tips">如有问题请拨打0571-88888888</string>
    <string name="register_ruler_tips">是否同意《杭州纺机用户协议》</string>

    <string name="my_order">我的订单</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_pay_type">我的支付方式</string>
    <string name="english">英文</string>
    <string name="mine">我的</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_publish">我的发布</string>
    <string name="my_care">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="bank_card_pay">微信支付</string>
    <string name="toPay">去支付</string>
    <string name="pay_type">支付方式</string>
    <string name="message">消息</string>
    <string name="message_reply">留言回复</string>
    <string name="personal_message">个人私信</string>
    <string name="who_likes_me">谁赞了我</string>
    <string name="avatar">头像</string>
    <string name="logout">退出登录</string>
    <string name="nick_name">昵称</string>
    <string name="set_phone">修改手机</string>
    <string name="set_password">修改密码</string>
    <string name="personal_data">个人资料</string>
    <string name="tech_exchange">技术交流</string>
    <string name="mechanical_demand">机械需求</string>
    <string name="mechanical_supply">机械供给</string>
    <string name="job_wanted">求职</string>
    <string name="recruit">招聘</string>
    <string name="empty">清空</string>

    <string name="contact_it">联系Ta</string>
    <string name="receive_invitation">接受邀请</string>
    <string name="toast_check_register_ruler">请勾选用户协议</string>
    <string name="get_code_count">%Ls后重发</string>
    <string name="send_get_code_success">验证码发送成功</string>
    <string name="register_success">注册成功</string>
    <string name="toast_reset_pwd_success">密码设置成功</string>

    <string name="commit">提交</string>
    <string name="search_hint">请输入关键字</string>
    <string name="share">分享</string>
    <string name="release_demand">发布需求</string>
    <string name="release_supply">发布供给</string>
    <string name="release_job">我要招人</string>
    <string name="release_recruit">我要求职</string>

    <string name="supply_newest">最新</string>
    <string name="supply_rapier">剑杆</string>
    <string name="supply_dabble">喷水</string>
    <string name="supply_spray_steam">喷汽</string>
    <string name="supply_mech">整经机械</string>
    <string name="supply_reform">改造研发</string>
    <string name="choose_all">全选</string>
    <string name="shopCar_buy">立即购买</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="hot_text">热门推荐</string>
    <string name="price_classify">价格</string>
    <string name="classify">分类</string>
    <string name="again_back">再按一次返回键退出</string>
    <string name="not_minus_shop_car">该宝贝不能减少了哦</string>
    <string name="confirm_order_buy_number">购买数</string>
    <string name="confirm_order_wuliu">物流</string>
    <string name="confirm_order_fahuodi">发货地</string>
    <string name="confirm_order_yunfei">运费</string>
    <string name="confirm_order_fapiao">发票</string>
    <string name="tel">电话</string>
    <string name="address">地址</string>
    <string name="transfer_price">转让价格:</string>
    <string name="publish_date">发布时间:</string>
    <string name="basic_info">基本信息</string>
    <string name="mech_type">机型:</string>
    <string name="spec">规格:</string>
    <string name="count">数量:</string>
    <string name="product_date">生产日期:</string>
    <string name="location">所在地:</string>
    <string name="device_status">设备状态</string>
    <string name="run_status">运行状态:</string>
    <string name="arm_type">多臂型号:</string>
    <string name="frame_count">综框数量:</string>
    <string name="beam_ratio">经轴比:</string>
    <string name="coil_roll_ratio">卷布辊比:</string>
    <string name="electronic_control">电控型号:</string>
    <string name="other">其他:</string>
    <string name="info_supplement">信息补充</string>
    <string name="contact_us">联系我们</string>
    <string name="confirm_order_title">确认订单</string>
    <string name="bug_error_toast">请至少选择一件商品</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="title_my_address">我的收货地址</string>
    <string name="title_address_add_new">添加新地址</string>
    <string name="address_receiver_people">收货人：%s</string>
    <string name="default_address_text">默认地址</string>
    <string name="shouhuo_address">收货地址：%s</string>
    <string name="receiver_people_change_address">收货人</string>
    <string name="receiver_phone_change_address">手机号码</string>
    <string name="delete_success">删除成功</string>
    <string name="add_success">添加成功</string>
    <string name="exchange_category">交流分类</string>
    <string name="select_exchange_category">请选择交流的类别</string>
    <string name="video_pic_upload">视频/图片上传</string>
    <string name="video_pic_num">请上传1个视频/低于6张照片</string>
    <string name="publish_idea">发布我的想法和问题</string>
    <string name="input_max_200">请输入200个以内的字符</string>
    <string name="commit_check">提交审核</string>
    <string name="exchange_publish">交流发布</string>
    <string name="product_title">产品标题</string>
    <string name="input_product_desc">请输入产品的标题描述</string>
    <string name="budget_price">预算价格</string>
    <string name="input_product_price">请输入产品的转让价格</string>
    <string name="input_address">请输入您的具体地址</string>
    <string name="input_tel">请输入您的联系电话</string>
    <string name="contact_information">联系方式</string>
    <string name="is_hide_tel">是否隐藏个人联系电话</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="specification_demand">规格需求</string>
    <string name="brand">品牌</string>
    <string name="input_brand">请输入设备品牌</string>
    <string name="model">机型</string>
    <string name="input_model">请输入设备型号</string>
    <string name="specification">规格</string>
    <string name="input_specification">请输入设备规格</string>
    <string name="input_select_count">请选择设备数量</string>
    <string name="input_product_date">请输入设备生产日期</string>
    <string name="delivery_address">提货预期地址</string>
    <string name="input_delivery_address">请选择设备预期地区</string>
    <string name="supply_add">需求补充</string>
    <string name="input_supply_add">根据您的需求补充产品信息</string>
    <string name="supply_publish">需求发布</string>
    <string name="select_device_status">请选择当前设备状态</string>
    <string name="input_device_arm">请输入设备多臂型号</string>
    <string name="input_frame_count">请输入设备综框数量</string>
    <string name="input_beam_ratio">请输入设备经轴比</string>
    <string name="input_coil_roll_ratio">请输入设备卷布辊比</string>
    <string name="input_electronic_control">请输入设备电控型号</string>
    <string name="work_exp">工作经验</string>
    <string name="age">年龄</string>
    <string name="full_name">姓名</string>
    <string name="sex">性别</string>
    <string name="education">学历</string>
    <string name="main_info">主要信息</string>
    <string name="hope_salary">期望薪资</string>
    <string name="input_hope_salary">输入您期望的薪资范围</string>
    <string name="hope_area">期望地区</string>
    <string name="input_hope_area">请输入期望的工作地区</string>
    <string name="work_experience">工作经历</string>
</resources>
