<?xml version="1.0" encoding="utf-8"?>
<merge>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:background="@color/main_bg_color"
                android:text="@string/contact_information"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                >

            <TextView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="*"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address"
                    android:gravity="center"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/tab_font_size"
                    />

            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/subTextColor"
                    android:hint="@string/input_address"
                    android:textSize="14sp"
                    />

        </LinearLayout>

        <View
                style="@style/Line"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                >

            <TextView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="*"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tel"
                    android:gravity="center"
                    android:textColor="@color/mainTextColor"
                    android:textSize="@dimen/tab_font_size"
                    />

            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/subTextColor"
                    android:hint="@string/input_tel"
                    android:textSize="14sp"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                >

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/is_hide_tel"
                        android:gravity="center_vertical|end"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/yes"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/no"
                        />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</merge>